# rust_project

./: .gitignore  Cargo.toml  README.md  TODO.md
res/: ball.mtl  floor.mtl  pin.mtl
src/: camera.rs  common.rs  context.rs  control.rs  light.wgsl  main.rs  math_func.rs  model.rs  phys.rs  resources.rs  shader.wgsl  texture.rs  transforms.rs  vertex_data.rs
