
[package]
name = "rust_project"
authors = ["Maurycy Szmuc"]
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.12"
cgmath = "0.18"
env_logger = "0.9"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.25"
bytemuck = {version = "1.4",features = ["derive"]}
anyhow = "1.0"
rand = "0.8.0"