
[package]
name = "rust_project"
authors = ["Maurycy Szmuc"]
version = "0.1.0"
edition = "2021"


[dependencies]
wgpu = "22.0"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.24"
log = "0.4"
pollster = "0.3"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.4", features = ["derive"] }
anyhow = "1.0"
rand ="0.8"
tobj = { version = "3.2", default-features = false, features = ["async"]}
cfg-if = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
rapier3d = { version = "0.22.0", features = [ "simd-stable" ] }
nalgebra = "0.33.2"
[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"